added some content

--- a/_includes/generate_personal.html
+++ b/_includes/generate_personal.html
@@ -1,2 +1,1 @@
-<h1>{{page.firstname}}</h1>
-haljsdljf
+Welcome to the homepage of <b>{{page.firstname}} {{page.last}}</b>. I am a {{page.role}} in the Theoretical Biophysics group at Humboldt University Berlin. Contact me via phone {{page.phone}} or mail: {{page.email}}.
